data/derived/sp14/progs/unify/prog0574.ml.out
Characters 126-142:
  | Cosine(e') -> cos(pi *. exprToString(e'))
                            ^^^^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         float
